--- a/register.html
+++ b/register.html
@@ -110,7 +110,8 @@
                 <option value="أنثى">أنثى</option>
             </select>
 
-            <button type="submit">إنشاء الحساب</button>
+            <button onclick="window.location.href='home.html';">إنشاء حساب</button>
+
         </form>
     </div>
 
